hphp/hack/test/typecheck/shape_idx2.php.exp
File "shape_idx2.php", line 9, characters 3-17:
Too few arguments (required 2 but got 1) (Typing[4104])
  File "Shapes.hhi", line 41, characters 28-30:
  Definition is here
